mobile version style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Huddle Landing Page">
+  <meta name="author" content="Ifeoluwa Oludare">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
@@ -17,7 +19,7 @@
 
 <body>
   <header class="header">
-    <div class="wrapper header__wrapper">
+    <div class="header__wrapper">
       <div class="header__logo-container">
         <div class="header__logo">
           <img src="./images/logo.svg" alt="page-logo">
@@ -61,45 +63,45 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="topic-1">
 
-      <div>
+      <div class="topic-1__curved">
         <!--div for curved path-->
         <picture>
-          <source media="(min-width: 375px and max-width: 600px )" srcset="./images/bg-section-top-mobile-1.svg">
-          <source media="(min-width: 900px )" srcset="./images/bg-section-top-desktop-1.svg">
-          <img src="./images/bg-section-top-desktop-1.svg" alt="curved top edges">
+          <source media="(min-width: 320px and max-width: 768px )" srcset="./images/bg-section-top-mobile-1.svg">
+          <source media="(min-width: 768px )" srcset="./images/bg-section-top-desktop-1.svg">
+          <img src="./images/bg-section-top-mobile-1.svg" alt="curved top edges">
         </picture>
       </div>
-      <div class="wrapper">
-        <div>
+      <div class="topic-1__wrapper wrapper wrapper--blue">
+        <div class="wrapper__img-container">
           <img src="./images/illustration-grow-together.svg" alt="growing illustration-grow-together">
         </div>
-        <div>
-          <h1>Grow Together</h1>
-          <p>
+        <div class="wrapper__info">
+          <h2 class="wrapper__title">Grow Together</h2>
+          <p class="wrapper__text">
             Generate meaningful discussions withyour audience and build a strong, loyal community. Think of the
             insightful conversations you miss out on with a feedback form.
           </p>
         </div>
 
       </div>
-      <div>
+      <div class="topic-1__curved">
         <picture>
-          <source media="(min-width: 375px and max-width: 600px )" srcset="./images/bg-section-top-mobile-1.svg">
-          <source media="(min-width: 900px )" srcset="./images/bg-section-top-desktop-1.svg">
-          <img src="./images/bg-section-top-desktop-1.svg" alt="curved top edges">
+          <source media="(min-width: 320px and max-width: 768px )" srcset="./images/bg-section-bottom-mobile-1.svg">
+          <source media="(min-width: 768px )" srcset="./images/bg-section-bottom-desktop-1.svg">
+          <img src="./images/bg-section-bottom-mobile-1.svg" alt="curved bottom edges">
         </picture>
       </div>
     </section>
-    <section>
-      <div class="wrapper">
-        <div>
+    <section class="topic-2">
+      <div class="topic-2__wrapper wrapper">
+        <div class="wrapper__img-container">
           <img src="./images/illustration-flowing-conversation.svg" alt="growing illustration-grow-together">
         </div>
-        <div>
-          <h1>Grow Together</h1>
-          <p>
+        <div class="wrapper__info">
+          <h2 class="wrapper__title">Flow conversations</h2>
+          <p class="wrapper__text">
             You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time
             loading for a more natural flow.
           </p>
@@ -108,23 +110,23 @@
       </div>
 
     </section>
-    <section>
+    <section class="topic-3">
 
-      <div>
+      <div class="topic-3__curved">
         <!--div for curved path-->
         <picture>
-          <source media="(min-width: 375px and max-width: 600px )" srcset="./images/bg-section-top-mobile-2.svg">
-          <source media="(min-width: 900px )" srcset="./images/bg-section-top-desktop-2.svg">
-          <img src="./images/bg-section-top-desktop-2.svg" alt="curved top edges">
+          <source media="(min-width: 320px and max-width: 768px)" srcset="./images/bg-section-top-mobile-2.svg">
+          <source media="(min-width: 768px )" srcset="./images/bg-section-top-desktop-2.svg">
+          <img src="./images/bg-section-top-mobile-2.svg" alt="curved top edges">
         </picture>
       </div>
-      <div class="wrapper">
-        <div>
+      <div class="topic-3__wrapper wrapper wrapper--blue">
+        <div class=" wrapper__img-container">
           <img src="./images/illustration-your-users.svg" alt="illustration-your-users">
         </div>
-        <div>
-          <h1>Your Users</h1>
-          <p>
+        <div class="wrapper__info">
+          <h2 class="wrapper__title">Your Users</h2>
+          <p class="wrapper__text">
             It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed
             in to your app, your users can start chatting immediately.
           </p>
@@ -133,9 +135,9 @@
       </div>
       <div>
         <picture>
-          <source media="(min-width: 375px and max-width: 600px )" srcset="./images/bg-section-top-mobile-2.svg">
-          <source media="(min-width: 900px )" srcset="./images/bg-section-top-desktop-2.svg">
-          <img src="./images/bg-section-top-desktop-2.svg" alt="curved top edges">
+          <source media="(min-width: 320px and max-width: 768px)" srcset="./images/bg-section-bottom-mobile-2.svg">
+          <source media="(min-width: 768px )" srcset="./images/bg-section-bottom-desktop-2.svg">
+          <img src="./images/bg-section-bottom-mobile-2.svg" alt="curved bottom edges">
         </picture>
       </div>
     </section>
