completed desktop version

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           To recieve tips on how to grow your community, sign up to our weekly newsletter. We'll never send you spam or
           pass on your email address
         </p>
-        <form action="#" class="form footer__form form">
+        <form action="#" class="form footer__form">
           <div class="form__input-container">
             <input class="footer__input" placeholder="example@huddle.com" type="email" name="email" id="email">
             <p class="form__error-message" aria-hidden="true">Check your email please</p>
