--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@
         <div class="footer__nav-container">
           <nav class="footer__nav">
             <ul class="footer__list">
+              <li class="footer__item"><a href="https://twitter.com/_ifeoluwaaa" title="twitter"><i
+                    class="fab fa-twitter-square"></i></a></li>
               <li class="footer__item"><a href="#" title="facebook"><i class="fab fa-facebook-square"></i></a></li>
               <li class="footer__item"><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
-              <li class="footer__item"><a href="#" title="twitter"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
           </nav>
         </div>
